@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-27T08:15:38Z",
-  "count_outdated" : 78,
-  "uniques_outdated" : 65,
-  "count" : 85,
-  "uniques" : 72,
+  "timestamp" : "2022-09-28T08:11:17Z",
+  "count_outdated" : 79,
+  "uniques_outdated" : 66,
+  "count" : 86,
+  "uniques" : 73,
   "clones" : [
-    {
-      "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-15T00:00:00Z",
       "count": 1,
@@ -49,6 +42,13 @@
     },
     {
       "timestamp": "2022-09-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
