@@ -1,3 +1,11 @@
+2022-09-28T08:11:17Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3141870151
+* notice: last 14d: unq all: 2 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 65 78 / 72 85
+* notice: next accum: outdated-unq outdated-all / unq all: 66 79 / 73 86
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-09-14] / [2022-09-28]
+
 2022-09-27T08:15:38Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3134007595
 * notice: last 14d: unq all: 2 7
